--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "sass-loader": "^10.0.1",
     "save": "^2.4.0",
     "vue": "^2.6.11",
+    "vue-papa-parse": "^2.0.0",
     "vue-router": "^3.1.6",
     "vuex": "^3.3.0"
   },
